--- a/ihmc-interfaces/build.gradle
+++ b/ihmc-interfaces/build.gradle
@@ -39,6 +39,7 @@ testSuites {
 mainDependencies {
    compile group: 'us.ihmc', name: 'euclid-core', version: '0.5.1'
    compile group: 'us.ihmc', name: 'euclid', version: '0.8.2'
+   compile group: 'us.ihmc', name: 'ihmc-commons', version: '0.19.0'
    compile group: 'us.ihmc', name: 'ihmc-pub-sub', version: '0.6.11-alpha'
    compile group: 'us.ihmc', name: 'ros2-common-interfaces', version: '0.7.3-alpha'
 }
