--- a/ihmc-model-file-loader/build.gradle
+++ b/ihmc-model-file-loader/build.gradle
@@ -1,15 +1,8 @@
-buildscript {
-   repositories {
-      maven { url "https://plugins.gradle.org/m2/" }
-      mavenLocal()
-   }
-   dependencies {
-      classpath "us.ihmc:ihmc-build:0.15.1"
-      classpath "us.ihmc:ihmc-ci-plugin:0.18.0"
-   }
+plugins {
+   id("us.ihmc.ihmc-build") version "0.15.1"
+   id("us.ihmc.ihmc-ci") version "1.1.6"
+   id("us.ihmc.log-tools") version "0.2.2"
 }
-apply plugin: "us.ihmc.ihmc-build"
-apply plugin: "us.ihmc.ihmc-ci-plugin"
 
 ihmc {
    loadProductProperties("../product.properties")
@@ -21,11 +14,6 @@ ihmc {
 // compileJava {
 //    options.compilerArgs += ["--add-modules", "java.xml.bind"]
 // }
-
-testSuites {
-   def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
-   bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
-}
 
 mainDependencies {
    compile group: "org.apache.commons", name: "commons-lang3", version: "3.8.1"
