--- a/ihmc-robot-data-logger/build.gradle
+++ b/ihmc-robot-data-logger/build.gradle
@@ -1,33 +1,21 @@
 buildscript {
    repositories {
-      maven {
-         url "http://dl.bintray.com/ihmcrobotics/maven-release"
-      }
-      maven {
-         url "http://dl.bintray.com/ihmcrobotics/maven-vendor"
-      }
-   }
-   dependencies {
-      classpath group: "us.ihmc", name: "ihmc-pub-sub-generator", version: "0.8.3"
-   }
-}
-
-buildscript {
-   repositories {
       maven { url "https://plugins.gradle.org/m2/" }
-      mavenLocal()
+      maven { url "http://dl.bintray.com/ihmcrobotics/maven-release" }
+      maven { url "http://dl.bintray.com/ihmcrobotics/maven-vendor" }
    }
    dependencies {
-      classpath "us.ihmc:ihmc-build:0.15.1"
-      classpath "us.ihmc:ihmc-ci-plugin:0.18.0"
-      classpath "org.hidetake:gradle-ssh-plugin:2.9.0"
+      classpath group: "us.ihmc", name: "ihmc-pub-sub-generator", version: "0.10.0"
    }
 }
 
-apply plugin: "application"
-apply plugin: "org.hidetake.ssh"
-apply plugin: "us.ihmc.ihmc-build"
-apply plugin: "us.ihmc.ihmc-ci-plugin"
+plugins {
+   id("us.ihmc.ihmc-build") version "0.15.1"
+   id("us.ihmc.ihmc-ci") version "1.1.6"
+   id("us.ihmc.log-tools") version "0.2.2"
+   id("org.hidetake.ssh") version "2.9.0"
+   id "application"
+}
 
 import org.gradle.api.GradleException
 
@@ -37,11 +25,6 @@ ihmc {
    configureDependencyResolution()
    resourceDirectory("main", "idl")
    configurePublications()
-}
-
-testSuites {
-   def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
-   bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
 }
 
 sourceSets.main.java.srcDirs += ["src/main/java-generated"]
