--- a/robot-environment-awareness/build.gradle
+++ b/robot-environment-awareness/build.gradle
@@ -1,16 +1,8 @@
-buildscript {
-   repositories {
-      maven { url "https://plugins.gradle.org/m2/" }
-      mavenLocal()
-   }
-   dependencies {
-      classpath "us.ihmc:ihmc-build:0.15.1"
-      classpath "us.ihmc:ihmc-ci-plugin:0.18.0"
-   }
+plugins {
+   id("us.ihmc.ihmc-build") version "0.15.1"
+   id("us.ihmc.ihmc-ci") version "1.1.6"
+   id("us.ihmc.log-tools") version "0.2.2"
 }
-apply plugin: "us.ihmc.ihmc-build"
-apply plugin: "us.ihmc.ihmc-ci-plugin"
-
 
 ihmc {
    loadProductProperties("../product.properties")
@@ -19,11 +11,6 @@ ihmc {
    
    configureDependencyResolution()
    configurePublications()
-}
-
-testSuites {
-   def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
-   bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
 }
 
 mainDependencies {
@@ -47,7 +34,6 @@ applicationDependencies {
    compile group: "us.ihmc", name: "simulation-construction-set", version: "0.12.6"
    compile group: "us.ihmc", name: "simulation-construction-set-tools", version: "source"
 }
-
 
 testDependencies {
    compile group: "junit", name: "junit", version: "4.12"
