--- a/valkyrie/build.gradle
+++ b/valkyrie/build.gradle
@@ -1,31 +1,16 @@
-buildscript {
-   repositories {
-      maven { url "https://plugins.gradle.org/m2/" }
-      mavenLocal()
-   }
-   dependencies {
-      classpath "us.ihmc:ihmc-build:0.15.1"
-      classpath "us.ihmc:ihmc-ci-plugin:0.18.0"
-      classpath "org.hidetake:gradle-ssh-plugin:2.9.0"
-   }
+plugins {
+   id("us.ihmc.ihmc-build") version "0.15.1"
+   id("us.ihmc.ihmc-ci") version "1.1.6"
+   id("us.ihmc.log-tools") version "0.2.2"
+   id("org.hidetake.ssh") version "2.9.0"
+   id "application"
 }
-
-apply plugin: "org.hidetake.ssh"
-apply plugin: "application"
-apply plugin: "us.ihmc.ihmc-build"
-apply plugin: "us.ihmc.ihmc-ci-plugin"
 
 ihmc {
    loadProductProperties("../product.properties")
 
    configureDependencyResolution()
    configurePublications()
-}
-
-testSuites {
-   def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
-   bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
-   maximumSuiteDuration = 15.0
 }
 
 mainDependencies {
